# python-EpicStuff

./: README.md  pyproject.toml
src/EpicStuff/: __init__.py  bar.py  dict.py  progress.py  version.py
src/epicstuff/: __init__.py  dict.py  progress.py  stuff.py  timer.py
tests/: bar.py  dict.py  stuff.py  test.py  timer.py
